--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@xyflow/react": "^12.8.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-hook-form": "^7.61.1",
     "tailwindcss": "^4.1.11",
     "uuid": "^11.1.0"
   },
