--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.61.1",
+    "react-toastify": "^11.0.5",
     "tailwindcss": "^4.1.11",
     "uuid": "^11.1.0"
   },
